# Huta_DSP

./: .gitignore  CMakeLists.txt  README.md  make.bat  make.sh  test.cpp  vis.bat  vis.sh
gui/includes/: MainWindow.hpp
gui/src/: MainWindow.cpp
includes/common/: debug.h  debug.hpp  filterType.h  filterType.hpp
includes/config/: AudioManager.hpp  SourceSelector.hpp
includes/core/: BiquadFilter.hpp  CanonicalFilter.hpp  ParametricEqualizer.hpp  PeakFilter.hpp  ShelvingFilter.hpp  StateVariableFilter.hpp
includes/dsp_math/: QNumber.h  QNumber.hpp  common.hpp  q15.h
includes/interface/: IDSPBlock.hpp  IFilter.hpp
includes/module/: BiquadFilter.hpp  CanonicalFilter.hpp  Filter.hpp  ParametricEqualizer.hpp  PeakFilter.hpp  ShelvingFilter.hpp  Signal.hpp  StateVariableFilter.hpp
includes/modules/: Fader.hpp  Limiter.hpp  LoudnessCompensation.hpp  MatrixMixer.hpp  ToneControl.hpp
includes/pipeline/: AudioPipeline.hpp
includes/test/: Signal.hpp  TestObject.hpp
src/: main.cpp  out
src/config/: AudioManager.cpp
src/core/: BiquadFilter.cpp  CanonicalFilter.cpp  ParametricEqualizer.cpp  PeakFilter.cpp  ShelvingFilter.cpp  StateVariableFilter.cpp
src/dsp_math/: QNumber.cpp  q15.cpp
src/interface/: IFilter.cpp
src/module/: BiquadFilter.cpp  CanonicalFilter.cpp  Filter.cpp  ParametricEqualizer.cpp  PeakFilter.cpp  ShelvingFilter.cpp  Signal.cpp  StateVariableFilter.cpp
src/modules/: Fader.cpp  Limiter.cpp  LoudnessCompensation.cpp  ToneControl.cpp
src/pipeline/: AudioPipeline.cpp
src/test/: Signal.cpp  TestObject.cpp
visualize/: inputSignal.txt  mixedSignal.txt  outputSignal_1.txt  outputSignal_2.txt  outputSignal_3.txt  outputSignal_4.txt  outputSignal_5.txt  outputSignal_6.txt  outputSignal_7.txt  sound.py  spectrum.py  vis.py
